# AQIForecaster-SA

./: .gitignore  README.md  config.json.example  main.py  pyproject.toml
aqiforecaster_sa/: aqi_data_fetcher.py  config_manager.py  data_fetcher.py  data_processor.py  feature_engineer.py  file_handler.py  hopsworks_integration.py  utils.py
data/: README.md
