[tool.poetry]
name = "aqiforecaster-sa"
version = "0.1.0"
description = ""
authors = ["mono <monika.obrocka@pendulum.global>"]
readme = "README.md"
packages = [{include = "aqiforecaster_sa"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.31.0"
loguru = "^0.7.2"
pathlib = "^1.0.1"
boto3 = "^1.34.54"
tsfresh = "^0.20.2"
hsfs = "^3.4.7"
pandas = "2.1.4"
hopsworks = "^3.4.4"
xgboost = "^2.0.3"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
